--- a/package.json
+++ b/package.json
@@ -5,28 +5,55 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}' && stylelint '**/*.scss'",
+    "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --fix && stylelint '**/*.scss' --fix",
     "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
+    "classnames": "^2.3.1",
     "next": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "^7.2.0"
+    "next-plugin-preact": "^3.0.4",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.19",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "react-redux": "^7.2.0",
+    "react-ssr-prepass": "npm:preact-ssr-prepass"
   },
   "license": "MIT",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^11.0.0",
     "@testing-library/user-event": "^13.0.0",
+    "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.0",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.2",
     "@types/react-redux": "7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
     "jest": "^26.0.0",
     "jest-css-modules-transform": "^4.2.0",
+    "node-sass": "4.14.1",
+    "prettier": "^2.2.1",
+    "sass-loader": "^11.0.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recess-order": "^2.4.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.2.0",
+    "stylelint-scss": "^3.19.0",
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
     "typescript": "4.2.3"
