--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}' && stylelint '**/*.scss'",
     "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --fix && stylelint '**/*.scss' --fix",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
@@ -24,7 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
-    "@testing-library/react": "^11.0.0",
+    "@testing-library/preact": "^2.0.1",
     "@testing-library/user-event": "^13.0.0",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^26.0.0",
