--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "with-redux-toolkit-typescript",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
-    "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "dev": "next",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}' && stylelint '**/*.scss'",
     "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --fix && stylelint '**/*.scss' --fix",
+    "prepare": "husky install",
+    "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch"
+  },
+  "lint-staged": {
+    "*.scss": "stylelint --fix",
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{md}": "prettier --write"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
@@ -22,7 +29,6 @@
     "react-redux": "^7.2.0",
     "react-ssr-prepass": "npm:preact-ssr-prepass"
   },
-  "license": "MIT",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/preact": "^2.0.1",
@@ -38,12 +44,15 @@
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-json": "^3.0.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "jest": "^26.0.0",
     "jest-css-modules-transform": "^4.2.0",
+    "lint-staged": "^11.0.0",
     "node-sass": "4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "^11.0.1",
